# Monte-Carlo-Expected-Credit-Loss-Simulator-with-PyTorch-Neural-Surrogate

./: .env.example  .gitignore  Dockerfile  README.md  contributions.md  docker-compose.yml  pyproject.toml
plans/: implementation_roadmap.md
results/: all_results.txt  multicore_results.txt  naive_results.txt  vectorized_results.txt
scripts/: validate_pipeline.ps1  validate_pipeline.py  validate_pipeline.sh
src/: config.py
src/ai_surrogate/: __init__.py  agentic_translator.py  app.py  cache.py  dataset.py  evaluate.py  generate_training_data.py  inference.py  llm_client.py  model.py  prompts.py  report_synthesizer.py  sampling.py  scalers.py  schemas.py  train.py  validate_dataset.py
src/computations/: ecl_engine.py  loop_calc.py  multicore_calc.py  vectorized_calc.py
src/risk_engine/: __init__.py  config.py
src/risk_engine/monte_carlo/: __init__.py  ecl_engine.py  loop_calc.py  multicore_calc.py  (+2 more)
tests/: conftest.py  test_agentic_translator.py  test_api.py  test_cache.py  test_ecl_engine.py  test_evaluate.py  test_generate_training_data.py  test_inference.py  test_integration_redis.py  test_phase0_smoke.py  test_report_synthesizer.py  test_sampling.py  test_surrogate_model.py  test_train.py  test_validate_dataset.py
tests/integration/: test_api.py  test_integration_redis.py
tests/unit/: test_agentic_translator.py  test_cache.py  test_ecl_engine.py  test_evaluate.py  test_generate_training_data.py  test_inference.py  test_phase0_smoke.py  test_report_synthesizer.py  test_sampling.py  test_surrogate_model.py  test_train.py  test_validate_dataset.py
(+20 files in other folders)
